outputs/dji-test/eoh/2025-07-28_22-09-21/evaluations/problem_eval5577378153149274002_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/dji/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjj/reevo/problems/dji/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/rjj/reevo/problems/dji/tmp/gpt_temp_8_a6e4cf47.py", line 5
    df['tr'] = df[['high' - 'low', 'high' - 'close'].shift(1), 'close'].shift(1) - df['low']].max(axis=1)
                                                                                            ^
SyntaxError: unmatched ']'
